overflow fix

--- a/styles/skills.css
+++ b/styles/skills.css
@@ -159,6 +159,6 @@ a {
     margin: auto;
     display: flex;
     margin-top: -50px;
-    margin-left: 60px;
+    margin-left: 80px;
   }
 }
